# LibreCNC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  checks.clang-tidy
cmake/: docs.cmake  options.cmake  static_analysis.cmake  tests.cmake
include/: common_defs.h  librecnc.h  librecnc_config.h.in  platform_defs.h
include/config/: config.h  config_keys.h  default_configs.h
include/interfaces/: Igcode.h  Iinputs.h  Ioutputs.h  inputs.h  outputs.h
include/interfaces/drivers/: limits.h  motors.h
src/: librecnc.c  platform_defs.h
src/config/: config.c
src/data_structures/list/: list.c  list.h
src/data_structures/map/: map.c  map.h
src/data_structures/ring_buffer/: ring_buffer.c  ring_buffer.h
src/gcode/: g_command.c  g_command.h  gcode.c  gcode.h  gcode_base_obj.h  m_command.c  m_command.h  parameter.c  parameter.h  parser.c  parser.h  utils.h
src/logger/: logger.c  logger.h
src/motion_calc/: motion_calc.c
src/planner/: g_commands.c  g_commands.h  m_commands.c  m_commands.h  planner.c  planner.h  ring_buffer.c  ring_buffer.h
src/stepper/: stepper.h
tests/: config.cpp  gcode.cpp  list.cpp  map.cpp  ring_buffer.cpp
